# tvb-widgets

./: .gitignore  LICENSE  MANIFEST.in  POC-with-code.ipynb  POC.ipynb  README.md  codecov.yml  codemeta.json  install.json  notebook_runner.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py  sonar-project.properties  tsconfig.eslint.json  tsconfig.json  tvbwidgets.json  webpack.config.js
.github/workflows/: build.yml  ebrains-sync.yml  notebooks.yml  release.yml
dev/: Dockerfile  Jenkinsfile  notebook_runner.py  prepare_env.bat  prepare_env.sh
frontend/_static/: embed-bundle.js  embed-bundle.js.map
frontend/src/: extension.ts  plugin.ts  (+2 more)
notebooks/: 3DWidget_Example.ipynb  BCT_interface.ipynb  Clusteringcoefficent.ipynb  Connect_to_HPC.ipynb  Connectivity.ipynb  ConnectivityMatrixEditor.ipynb  ConnectivitySpaceTimeWidget.ipynb  Connectivity_react_widget.ipynb  Connectvity_react_widget.ipynb  DicomWidget.ipynb  HeadWidget.ipynb  PSELauncher.ipynb  PSEWidget.ipynb  PhasePlane.ipynb  SpaceTimeVisualizerWidget.ipynb  SurfaceWidget.ipynb  TVB-pythreejs.ipynb  TVB-pyvista.ipynb  TestPhasePlaneExport.ipynb  TestSurface.ipynb  TestWidget.ipynb  TimeSeriesArray.ipynb  TimeSeriesEDF.ipynb  TimeSeriesRaw.ipynb  TimeSeriesTVB.ipynb  Untitled.ipynb  Untitled1.ipynb  betweeness_centrality.ipynb  eigenvectorcentrality.ipynb  integrated_terminal.ipynb  pse_20260319_125021.toml  strength.ipynb  unified1.ipynb  unified2.ipynb
src/: extension.ts  index.ts  plugin.ts  version.ts  widget.ts
tvb-env/: pyvenv.cfg
tvbwidgets/: __init__.py  _version.py  api.py  commons.py  dashboard.py  drive_upload_widget.py  phase_plane_widget.py  readers.py  surface_viewer_widget.py
widgets/: dashboard.py  drive_upload_widget.py  model_3d.py  phase_plane_widget.py  repo_browser_widget.py  surface_viewer_widget.py
xai_workflows/: simulator.xircuits  ts_widget.xircuits
(+166 files in other folders)
